WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
164172
Web Inspector: Breakpoints not working in scripts with unicode characters
https://bugs.webkit.org/show_bug.cgi?id=164172
Summary
Web Inspector: Breakpoints not working in scripts with unicode characters
Joseph Pecoraro
Reported
2016-10-28 20:02:36 PDT
Summary: Breakpoints not working in scripts with unicode characters Oops, missed a call site to construct the parser to populate the debugger data struct. I blame optional parameters =(
Attachments
[PATCH] Proposed Fix
(7.97 KB, patch)
2016-10-28 20:04 PDT
,
Joseph Pecoraro
rniwa
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2016-10-28 20:02:48 PDT
<
rdar://problem/28895862
>
Joseph Pecoraro
Comment 2
2016-10-28 20:04:21 PDT
Created
attachment 293267
[details]
[PATCH] Proposed Fix
Joseph Pecoraro
Comment 3
2016-10-28 20:06:27 PDT
Comment on
attachment 293267
[details]
[PATCH] Proposed Fix View in context:
https://bugs.webkit.org/attachment.cgi?id=293267&action=review
> LayoutTests/inspector/debugger/breakpoints/resolved-dump-all-pause-locations.html:4 > +<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
I think I can use <meta charset="utf-8"> which is slightly nicer =)
Yusuke Suzuki
Comment 4
2016-10-28 20:10:56 PDT
Comment on
attachment 293267
[details]
[PATCH] Proposed Fix View in context:
https://bugs.webkit.org/attachment.cgi?id=293267&action=review
r=me too :)
> LayoutTests/inspector/debugger/breakpoints/resources/dump-unicode.js:2 > +var unicodeVariableStr = "Non-8-bit 'â' character.";
I recommend adding some unicode string that includes surrogate pairs.
Joseph Pecoraro
Comment 5
2016-10-28 20:19:28 PDT
<
https://trac.webkit.org/changeset/208097
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug