Web Inspector: Breakpoints not working in scripts with unicode characters https://bugs.webkit.org/show_bug.cgi?id=164172 <rdar://problem/28895862>

Reviewed by Ryosuke Niwa.

Source/JavaScriptCore:

* parser/Parser.h:
(JSC::parse):
Ensure we pass the debuggerParseData struct to get populated in the
non 8bit string case!

LayoutTests:

* inspector/debugger/breakpoints/resolved-dump-all-pause-locations-expected.txt:
* inspector/debugger/breakpoints/resolved-dump-all-pause-locations.html:
* inspector/debugger/breakpoints/resolved-dump-each-line-expected.txt:
* inspector/debugger/breakpoints/resolved-dump-each-line.html:
* inspector/debugger/breakpoints/resources/dump-unicode.js: Added.
Ensure we can set breakpoints and resolve them in non-8bit source code.

Canonical link: https://commits.webkit.org/181879@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208097 268f45cc-cd09-0410-ab3c-d52691b4dbfc